--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.2",
     "python-shell": "^5.0.0"
   }
 }
