--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "type": "module",
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "node": "^21.2.0",
+    "node-fetch": "^3.3.2",
     "nodemon": "^3.0.1",
     "python-shell": "^5.0.0"
   }
